Add CI chencks for indexer

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -281,3 +281,32 @@ jobs:
           export CVC5_EXE="${BIN_DIR}/cvc5"
           export BOOGIE_EXE="${DOTNET_ROOT}/tools/boogie"
           /home/runner/.cargo/bin/cargo run -p sui -- move prove
+
+  indexer:
+    name: indexer
+    needs: diff
+    if: needs.diff.outputs.isRust == 'true'
+    timeout-minutes: 45
+    runs-on: [ubuntu-ghcloud]
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgrespw
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+      - name: integration-test-with-postgres
+        run: |
+          cargo test --package sui-indexer --test integration_tests --features pg_integration
+        env:
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
+
