--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -72,6 +72,7 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^8.2.4",
+    "@types/tmp": "^0.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
