--- a/crates/sui-types/Cargo.toml
+++ b/crates/sui-types/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 edition = "2021"
 
 [dependencies]
+backtrace = { version = "0.3" }
 anemo.workspace = true
 anemo-tower.workspace = true
 anyhow = { version = "1.0.64", features = ["backtrace"] }
