Migrate wallet adapters to Transaction Builder

--- a/sdk/wallet-adapter/example/package.json
+++ b/sdk/wallet-adapter/example/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@mysten/sui.js": "workspace:*",
     "@mysten/wallet-kit": "workspace:*",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.4.0",
