[programmable transactions] Add scaffold for `Upgrade` command
This adds the basic command for package upgrades, and starts to scaffold
support for it on the adapter side without doing any checks for it.

--- a/crates/sui-core/tests/staged/sui.yaml
+++ b/crates/sui-core/tests/staged/sui.yaml
@@ -93,6 +93,14 @@ Command:
               TYPENAME: TypeTag
           - SEQ:
               TYPENAME: Argument
+    6:
+      Upgrade:
+        TUPLE:
+          - TYPENAME: Argument
+          - SEQ:
+              TYPENAME: ObjectID
+          - SEQ:
+              SEQ: U8
 CommandArgumentError:
   ENUM:
     0:
@@ -310,6 +318,12 @@ ExecutionFailureStatus:
           - idx: U16
     40:
       ArityMismatch: UNIT
+    41:
+      FeatureNotYetSupported: UNIT
+    42:
+      PackageUpgradeError:
+        NEWTYPE:
+          TYPENAME: PackageUpgradeError
 ExecutionStatus:
   ENUM:
     0:
@@ -481,6 +495,18 @@ Owner:
               TYPENAME: SequenceNumber
     3:
       Immutable: UNIT
+PackageUpgradeError:
+  ENUM:
+    0:
+      UnableToFetchPackage:
+        NEWTYPE:
+          TYPENAME: ObjectID
+    1:
+      NotAPackage:
+        NEWTYPE:
+          TYPENAME: ObjectID
+    2:
+      IncompatibleUpgrade: UNIT
 ProgrammableMoveCall:
   STRUCT:
     - package:
