--- a/apps/wallet/configs/ts/tsconfig.common.json
+++ b/apps/wallet/configs/ts/tsconfig.common.json
@@ -45,6 +45,7 @@
             "_font-icons/*": ["./font-icons/*"],
             "@mysten/sui.js": ["../../sdk/typescript/src/"],
             "@mysten/bcs": ["../../sdk/bcs/src/"],
+            "@mysten/ledgerjs-hw-app-sui": ["../../sdk/ledgerjs-hw-app-sui"],
             "@mysten/wallet-standard": [
                 "../../sdk/wallet-adapter/wallet-standard/src/"
             ]
